--- a/index.html
+++ b/index.html
@@ -36,6 +36,13 @@
             </li>
         </ul>
     </header>
+    <!-- Greeting -->
+    <div class="greeting">
+        <h1 class="greet-hello">Hi, I'm Minhazur Rahaman
+            <h3 class="greet-position">Full Stack Developer</h3>
+        </h1>
+    </div>
+    
 </body>
 
 </html>
