--- a/index.html
+++ b/index.html
@@ -43,6 +43,20 @@
         </h1>
     </div>
     
+    <div class="skills">
+        <h2 class="skills-title">Skills</h2>
+        <div class="row">
+            <div class="col-sm">
+              One of three columns
+            </div>
+            <div class="col-sm">
+              One of three columns
+            </div>
+            <div class="col-sm">
+              One of three columns
+            </div>
+          </div>
+    </div>
 </body>
 
 </html>
