Skills are now added

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
                 <a class="nav-link" href="#">Home</a>
             </li>
             <li class="nav-item">
+                <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">About</a>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link" href="#">Skills</a>
             </li>
             <li class="nav-item">
@@ -42,20 +45,92 @@
             <h3 class="greet-position">Full Stack Developer</h3>
         </h1>
     </div>
-    
+    <!-- Skiils -->
     <div class="skills">
         <h2 class="skills-title">Skills</h2>
         <div class="row">
             <div class="col-sm">
-              One of three columns
+                <h4>Languages</h4>
             </div>
             <div class="col-sm">
-              One of three columns
+                <h4>Tools</h4>
             </div>
             <div class="col-sm">
-              One of three columns
+                <h4>Frameworks</h4>
             </div>
-          </div>
+        </div>
+
+        <div class="row">
+            <div class="col-sm">
+                JavaScript
+            </div>
+            <div class="col-sm">
+                Node.js
+            </div>
+            <div class="col-sm">
+
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-sm">
+                HTML
+            </div>
+            <div class="col-sm">
+                MongoDB
+            </div>
+            <div class="col-sm">
+
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-sm">
+                CSS
+            </div>
+            <div class="col-sm">
+
+            </div>
+            <div class="col-sm">
+
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-sm">
+                Python
+            </div>
+            <div class="col-sm">
+
+            </div>
+            <div class="col-sm">
+
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-sm">
+                Java
+            </div>
+            <div class="col-sm">
+
+            </div>
+            <div class="col-sm">
+
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-sm">
+                C++
+            </div>
+            <div class="col-sm">
+
+            </div>
+            <div class="col-sm">
+
+            </div>
+        </div>
     </div>
 </body>
 
