About me section is added with description

--- a/index.html
+++ b/index.html
@@ -45,6 +45,14 @@
             <h3 class="greet-position">Full Stack Developer</h3>
         </h1>
     </div>
+    <!-- About -->
+    <div class="about">
+        <h2 class="about-name">
+            About
+        </h2>
+        <p class="about-desc">My name is Minhazur Rahaman. I’m a full stack developer with experience in working in the front end and in the back end <br>
+            including JS and Python. I am dedicated to my work in creating reliable, and useful applications for consumers so my <br>approach is taking the extra time to work on solving logical issues or breaking down large problems to find solutions <br>so the program runs smoothly on the client side.</p>
+    </div>
     <!-- Skiils -->
     <div class="skills">
         <h2 class="skills-title">Skills</h2>
