fixed about me section word wrapping issues

--- a/index.html
+++ b/index.html
@@ -50,8 +50,7 @@
         <h2 class="about-name">
             About
         </h2>
-        <p class="about-desc">My name is Minhazur Rahaman. I’m a full stack developer with experience in working in the front end and in the back end <br>
-            including JS and Python. I am dedicated to my work in creating reliable, and useful applications for consumers so my <br>approach is taking the extra time to work on solving logical issues or breaking down large problems to find solutions <br>so the program runs smoothly on the client side.</p>
+        <p class="about-desc">My name is Minhazur Rahaman. I’m a full stack developer with experience in working in the front end and in the back end including JS and Python. I am dedicated to my work in creating reliable, and useful applications for consumers so my approach is taking the extra time to work on solving logical issues or breaking down large problems to find solutions so the program runs smoothly on the client side.</p>
     </div>
     <!-- Skiils -->
     <div class="skills">
@@ -140,6 +139,9 @@
             </div>
         </div>
     </div>
+
+    <!-- Projects -->
+    <div class="projects"></div>
 </body>
 
 </html>
