Created a projects section with pictures

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 Node.js
             </div>
             <div class="col-sm">
-
+                Express.js
             </div>
         </div>
 
@@ -141,7 +141,27 @@
     </div>
 
     <!-- Projects -->
-    <div class="projects"></div>
+    <div class="projects">
+        <h2 class="projects-title">Projects</h2>
+        <ul class='projects-list'>
+            <h3 class="projects-list-item">MusicScape
+                <p class="projects-desc">A fullstack application created by myself and another developer in a week that allows users to create playlists and add songs to them which automatically includes embedded music videos by using Genius API. A user can view other peoples playlists and songs and also create their own playlists by creating an account.<br><br>
+                Technologies used: <strong>JavaScript, HTML, CSS, Express.js, Bcrypt, MongoDB, and Genius API</strong><br>
+                Live: <a href="https://fierce-bastion-27114.herokuapp.com/" class="live-link">MusicScape</a>
+                </p>
+                <img src="./styles/images/MusicScape.PNG" alt="MusicScape" class="projects-picture">
+                
+            </h3>
+            <h3 class="projects-list-item">Tomagotchi Pokemon
+                <p class="projects-desc">A browser game that requires skill and focus that needs players to help a pet survive until it morphs into its later stages in life. It records how many days your pet has survived and the clock will be ticking at all times<br><br>
+                Technologies used: <strong>JavaScript, HTML, CSS</strong><br>
+                Live: <a href="https://pages.git.generalassemb.ly/min/Project-0-Tamagotchi/" class="live-link">Tamagotchi Pokemon</a>
+                </p>
+                <img src="./styles/images/Tomagotchi.PNG" alt="Tomagotchi Clone" class="projects-picture">
+            </h3>
+            
+        </ul>
+    </div>
 </body>
 
 </html>
