--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/animations.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="./styles/main.css">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
@@ -50,7 +51,10 @@
         <h2 class="about-name">
             About
         </h2>
-        <p class="about-desc">My name is Minhazur Rahaman. I’m a full stack developer with experience in working in the front end and in the back end including JS and Python. I am dedicated to my work in creating reliable, and useful applications for consumers so my approach is taking the extra time to work on solving logical issues or breaking down large problems to find solutions so the program runs smoothly on the client side.</p>
+        <p class="about-desc">My name is Minhazur Rahaman. I’m a full stack developer with experience in working in the
+            front end and in the back end including JS and Python. I am dedicated to my work in creating reliable, and
+            useful applications for consumers so my approach is taking the extra time to work on solving logical issues
+            or breaking down large problems to find solutions so the program runs smoothly on the client side.</p>
     </div>
     <!-- Skiils -->
     <div class="skills">
@@ -145,22 +149,40 @@
         <h2 class="projects-title">Projects</h2>
         <ul class='projects-list'>
             <h3 class="projects-list-item">MusicScape
-                <p class="projects-desc">A fullstack application created by myself and another developer in a week that allows users to create playlists and add songs to them which automatically includes embedded music videos by using Genius API. A user can view other peoples playlists and songs and also create their own playlists by creating an account.<br><br>
-                Technologies used: <strong>JavaScript, HTML, CSS, Express.js, Bcrypt, MongoDB, and Genius API</strong><br>
-                Live: <a href="https://fierce-bastion-27114.herokuapp.com/" class="live-link">MusicScape</a>
+                <p class="projects-desc">A fullstack application created by myself and another developer in a week that
+                    allows users to create playlists and add songs to them which automatically includes embedded music
+                    videos by using Genius API. A user can view other peoples playlists and songs and also create their
+                    own playlists by creating an account.<br><br>
+                    Technologies used: <strong>JavaScript, HTML, CSS, Express.js, Bcrypt, MongoDB, and Genius
+                        API</strong><br>
+                    Live: <a href="https://fierce-bastion-27114.herokuapp.com/" class="live-link">MusicScape</a>
                 </p>
                 <img src="./styles/images/MusicScape.PNG" alt="MusicScape" class="projects-picture">
-                
+
             </h3>
             <h3 class="projects-list-item">Tomagotchi Pokemon
-                <p class="projects-desc">A browser game that requires skill and focus that needs players to help a pet survive until it morphs into its later stages in life. It records how many days your pet has survived and the clock will be ticking at all times<br><br>
-                Technologies used: <strong>JavaScript, HTML, CSS</strong><br>
-                Live: <a href="https://pages.git.generalassemb.ly/min/Project-0-Tamagotchi/" class="live-link">Tamagotchi Pokemon</a>
+                <p class="projects-desc">A browser game that requires skill and focus that needs players to help a pet
+                    survive until it morphs into its later stages in life. It records how many days your pet has
+                    survived and the clock will be ticking at all times<br><br>
+                    Technologies used: <strong>JavaScript, HTML, CSS</strong><br>
+                    Live: <a href="https://pages.git.generalassemb.ly/min/Project-0-Tamagotchi/"
+                        class="live-link">Tamagotchi Pokemon</a>
                 </p>
                 <img src="./styles/images/Tomagotchi.PNG" alt="Tomagotchi Clone" class="projects-picture">
             </h3>
-            
         </ul>
+    </div>
+    <!-- Contact -->
+    <div class="contact">
+        <h2 class="contact-title">Contact Me</h2>
+        <form action="mailto:minhazur190@gmail.com" method="GET">
+            <label for="subject" class="contact-fields">Subject</label>
+            <input class="contact-input" type="text" name="subject" id="subject">
+            <label for="body" class="contact-fields">Message</label>
+            <textarea class="contact-input" name="body" id="body" cols="40" rows="3"></textarea>
+            <input class="contact-input-button" type="submit" value="Submit">
+        </form>
+        <a href="https://github.com/minhazur9" class="github"><i></i></a>
     </div>
 </body>
 
