--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/animations.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
     <link rel="stylesheet" href="./styles/main.css">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
@@ -182,7 +182,10 @@
             <textarea class="contact-input" name="body" id="body" cols="40" rows="3"></textarea>
             <input class="contact-input-button" type="submit" value="Submit">
         </form>
-        <a href="https://github.com/minhazur9" class="github"><i></i></a>
+        <p>Form not working? Email me at <strong>minhazur190@gmail.com</strong></p>
+        <a href="https://github.com/minhazur9" class="github"><i class="fab fa-github"></i></a>
+        <a href="https://github.com/minhazur9" class="linkedIn"><i class="fab fa-linkedin"></i></a>
+        
     </div>
 </body>
 
