--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/animations.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
+        integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
+        crossorigin="anonymous" />
     <link rel="stylesheet" href="./styles/main.css">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
@@ -23,19 +25,19 @@
     <!-- Nav Bar -->
     <header>
         <ul class="nav">
-            <li class="nav-item active">
+            <li class="nav-item active" id='home'>
                 <a class="nav-link" href="#">Home</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item" id='about'>
                 <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">About</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item" id='skills'>
                 <a class="nav-link" href="#">Skills</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item" id='projects'>
                 <a class="nav-link" href="#">Projects</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item" id='contact'>
                 <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Contact</a>
             </li>
         </ul>
@@ -47,14 +49,19 @@
         </h1>
     </div>
     <!-- About -->
-    <div class="about">
-        <h2 class="about-name">
-            About
-        </h2>
-        <p class="about-desc">My name is Minhazur Rahaman. I’m a full stack developer with experience in working in the
-            front end and in the back end including JS and Python. I am dedicated to my work in creating reliable, and
-            useful applications for consumers so my approach is taking the extra time to work on solving logical issues
-            or breaking down large problems to find solutions so the program runs smoothly on the client side.</p>
+    <div class="about-container">
+        <div class="about">
+            <h2 class="about-name">
+                About
+            </h2>
+            <p class="about-desc">My name is Minhazur Rahaman. I’m a full stack developer with experience in working in
+                the
+                front end and in the back end including JS and Python. I am dedicated to my work in creating reliable,
+                and
+                useful applications for consumers so my approach is taking the extra time to work on solving logical
+                issues
+                or breaking down large problems to find solutions so the program runs smoothly on the client side.</p>
+        </div>
     </div>
     <!-- Skiils -->
     <div class="skills">
@@ -185,7 +192,7 @@
         <p>Form not working? Email me at <strong>minhazur190@gmail.com</strong></p>
         <a href="https://github.com/minhazur9" class="github"><i class="fab fa-github"></i></a>
         <a href="https://github.com/minhazur9" class="linkedIn"><i class="fab fa-linkedin"></i></a>
-        
+
     </div>
 </body>
 
