Added colorful backgrounds to sections

--- a/index.html
+++ b/index.html
@@ -63,90 +63,92 @@
                 or breaking down large problems to find solutions so the program runs smoothly on the client side.</p>
         </div>
     </div>
-    <!-- Skiils -->
-    <div class="skills">
-        <h2 class="skills-title">Skills</h2>
-        <div class="row">
-            <div class="col-sm">
-                <h4>Languages</h4>
+    <!-- Skills -->
+    <div class="skills-container">
+        <div class="skills">
+            <h2 class="skills-title">Skills</h2>
+            <div class="row">
+                <div class="col-sm">
+                    <h4>Languages</h4>
+                </div>
+                <div class="col-sm">
+                    <h4>Tools</h4>
+                </div>
+                <div class="col-sm">
+                    <h4>Frameworks</h4>
+                </div>
             </div>
-            <div class="col-sm">
-                <h4>Tools</h4>
-            </div>
-            <div class="col-sm">
-                <h4>Frameworks</h4>
-            </div>
-        </div>
 
-        <div class="row">
-            <div class="col-sm">
-                JavaScript
+            <div class="row">
+                <div class="col-sm">
+                    JavaScript
+                </div>
+                <div class="col-sm">
+                    Node.js
+                </div>
+                <div class="col-sm">
+                    Express.js
+                </div>
             </div>
-            <div class="col-sm">
-                Node.js
-            </div>
-            <div class="col-sm">
-                Express.js
-            </div>
-        </div>
 
-        <div class="row">
-            <div class="col-sm">
-                HTML
-            </div>
-            <div class="col-sm">
-                MongoDB
-            </div>
-            <div class="col-sm">
+            <div class="row">
+                <div class="col-sm">
+                    HTML
+                </div>
+                <div class="col-sm">
+                    MongoDB
+                </div>
+                <div class="col-sm">
 
+                </div>
             </div>
-        </div>
 
-        <div class="row">
-            <div class="col-sm">
-                CSS
+            <div class="row">
+                <div class="col-sm">
+                    CSS
+                </div>
+                <div class="col-sm">
+
+                </div>
+                <div class="col-sm">
+
+                </div>
             </div>
-            <div class="col-sm">
 
+            <div class="row">
+                <div class="col-sm">
+                    Python
+                </div>
+                <div class="col-sm">
+
+                </div>
+                <div class="col-sm">
+
+                </div>
             </div>
-            <div class="col-sm">
 
+            <div class="row">
+                <div class="col-sm">
+                    Java
+                </div>
+                <div class="col-sm">
+
+                </div>
+                <div class="col-sm">
+
+                </div>
             </div>
-        </div>
 
-        <div class="row">
-            <div class="col-sm">
-                Python
-            </div>
-            <div class="col-sm">
+            <div class="row">
+                <div class="col-sm">
+                    C++
+                </div>
+                <div class="col-sm">
 
-            </div>
-            <div class="col-sm">
+                </div>
+                <div class="col-sm">
 
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col-sm">
-                Java
-            </div>
-            <div class="col-sm">
-
-            </div>
-            <div class="col-sm">
-
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col-sm">
-                C++
-            </div>
-            <div class="col-sm">
-
-            </div>
-            <div class="col-sm">
-
+                </div>
             </div>
         </div>
     </div>
@@ -180,19 +182,20 @@
         </ul>
     </div>
     <!-- Contact -->
-    <div class="contact">
-        <h2 class="contact-title">Contact Me</h2>
-        <form action="mailto:minhazur190@gmail.com" method="GET">
-            <label for="subject" class="contact-fields">Subject</label>
-            <input class="contact-input" type="text" name="subject" id="subject">
-            <label for="body" class="contact-fields">Message</label>
-            <textarea class="contact-input" name="body" id="body" cols="40" rows="3"></textarea>
-            <input class="contact-input-button" type="submit" value="Submit">
-        </form>
-        <p>Form not working? Email me at <strong>minhazur190@gmail.com</strong></p>
-        <a href="https://github.com/minhazur9" class="github"><i class="fab fa-github"></i></a>
-        <a href="https://github.com/minhazur9" class="linkedIn"><i class="fab fa-linkedin"></i></a>
-
+    <div class="contact-container">
+        <div class="contact">
+            <h2 class="contact-title">Contact Me</h2>
+            <form action="mailto:minhazur190@gmail.com" method="GET">
+                <label for="subject" class="contact-fields">Subject</label>
+                <input class="contact-input" type="text" name="subject" id="subject">
+                <label for="body" class="contact-fields">Message</label>
+                <textarea class="contact-input" name="body" id="body" cols="40" rows="3"></textarea>
+                <input class="contact-input-button" type="submit" value="Submit">
+            </form>
+            <p>Form not working? Email me at <strong>minhazur190@gmail.com</strong></p>
+            <a href="https://github.com/minhazur9" class="github"><i class="fab fa-github"></i></a>
+            <a href="https://www.linkedin.com/in/mindev22/" class="linkedIn"><i class="fab fa-linkedin"></i></a>
+        </div>
     </div>
 </body>
 
