--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
                 and
                 useful applications for consumers so my approach is taking the extra time to work on solving logical
                 issues
-                or breaking down large problems to find solutions so the program runs smoothly on the client side.</p>
+                or breaking down large problems to find solutions so the program runs smoothly on the client side.
+            </p>
+            <h3>Resume: <a id="resume" href="./files/Resume Draft 1.docx" download>My Resume</a></h3>
         </div>
     </div>
     <!-- Skills -->
