Added github repo links and login info

--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
             <li class="nav-item" id='contact'>
                 <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Contact</a>
             </li>
+            <li class="nav-item" id='contact'>
+                <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Contact</a>
+            </li>
         </ul>
     </header>
     <!-- Greeting -->
@@ -62,7 +65,7 @@
                 issues
                 or breaking down large problems to find solutions so the program runs smoothly on the client side.
             </p>
-            <h3>Resume: <a id="resume" href="./files/Resume Draft 1.docx" download>My Resume</a></h3>
+            <h3>Resume: <a id="resume" href="./files/Minhazur_Rahaman_Resume.docx" download>My Resume</a></h3>
         </div>
     </div>
     <!-- Skills -->
@@ -70,86 +73,65 @@
         <div class="skills">
             <h2 class="skills-title">Skills</h2>
             <div class="row">
-                <div class="col-sm">
+                <div class="col">
                     <h4>Languages</h4>
                 </div>
-                <div class="col-sm">
-                    <h4>Tools</h4>
-                </div>
-                <div class="col-sm">
-                    <h4>Frameworks</h4>
+                <div class="col">
+                    <h4>Libaries & Frameworks</h4>
                 </div>
             </div>
 
             <div class="row">
-                <div class="col-sm">
+                <div class="col">
+                    Python
+                </div>
+                <div class="col">
+                    Django<span style="padding:90px">Materialize.css</span>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col">
                     JavaScript
                 </div>
-                <div class="col-sm">
-                    Node.js
+                <div class="col">
+                    React.js<span style="padding:82px">Jquery</span>
                 </div>
-                <div class="col-sm">
+            </div>
+
+            <div class="row">
+                <div class="col">
+                     HTML 
+                </div>
+                <div class="col">
+                    MongoDB<span style="padding:70px">Bootstrap.css</span>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col">
+                    CSS
+                </div>
+                <div class="col">
                     Express.js
                 </div>
             </div>
 
             <div class="row">
-                <div class="col-sm">
-                    HTML
-                </div>
-                <div class="col-sm">
-                    MongoDB
-                </div>
-                <div class="col-sm">
-
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col-sm">
-                    CSS
-                </div>
-                <div class="col-sm">
-
-                </div>
-                <div class="col-sm">
-
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col-sm">
-                    Python
-                </div>
-                <div class="col-sm">
-
-                </div>
-                <div class="col-sm">
-
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col-sm">
+                <div class="col">
                     Java
                 </div>
-                <div class="col-sm">
-
-                </div>
-                <div class="col-sm">
-
+                <div class="col">
+                    PostgresSQL
                 </div>
             </div>
 
             <div class="row">
-                <div class="col-sm">
+                <div class="col">
                     C++
                 </div>
-                <div class="col-sm">
-
-                </div>
-                <div class="col-sm">
-
+                <div class="col">
+                    Node.js
                 </div>
             </div>
         </div>
@@ -159,14 +141,28 @@
     <div class="projects">
         <h2 class="projects-title">Projects</h2>
         <ul class='projects-list'>
+            <h3 class="projects-list-item">Wayfarer
+                <p class="projects-desc">A fullstack social media like application created by myself and three other developers 
+                    in a week that allows users to create an account and post pictures of the sights and landmarks of the cities
+                    that they have traveled to share it with the world, and to also comment on other peoples posts. <br><br>
+                    Technologies used: <strong>Javascript, Python, Django, Jquery, PostgresSQL, CSS, HTML, Materialize.css</strong></br>
+                    Live: <a href="https://wayfarer-min.herokuapp.com/" class="live-link">Wayfarer</a><br>
+                    Github <a class="live-link" href="https://github.com/minhazur9/wayfarer">Link</a><br><br>
+                    Use this Login Info:</strong><br>email: guest123 <br>password: accountpass<br>
+                </p>
+                <img src="./styles/images/Wayfarer.PNG" alt="Wayfarer" class="projects-picture">
+            </h3>
             <h3 class="projects-list-item">MusicScape
                 <p class="projects-desc">A fullstack application created by myself and another developer in a week that
                     allows users to create playlists and add songs to them which automatically includes embedded music
                     videos by using Genius API. A user can view other peoples playlists and songs and also create their
                     own playlists by creating an account.<br><br>
-                    Technologies used: <strong>JavaScript, HTML, CSS, Express.js, Bcrypt, MongoDB, and Genius
+                    Technologies used: <strong>JavaScript, Jquery, HTML, CSS, Express.js, Bcrypt, MongoDB, and Genius
                         API</strong><br>
-                    Live: <a href="https://fierce-bastion-27114.herokuapp.com/" class="live-link">MusicScape</a>
+                    Live: <a href="https://fierce-bastion-27114.herokuapp.com/" class="live-link">MusicScape</a><br>
+                    Github <a class="live-link" href="https://github.com/minhazur9/MusicScape">Link</a><br><br>
+                    Use this Login Info:</strong><br>email: guest@gmail.com <br>password: guest<br>
+                    
                 </p>
                 <img src="./styles/images/MusicScape.PNG" alt="MusicScape" class="projects-picture">
 
@@ -177,7 +173,8 @@
                     survived and the clock will be ticking at all times<br><br>
                     Technologies used: <strong>JavaScript, HTML, CSS</strong><br>
                     Live: <a href="https://pages.git.generalassemb.ly/min/Project-0-Tamagotchi/"
-                        class="live-link">Tamagotchi Pokemon</a>
+                        class="live-link">Tamagotchi Pokemon</a><br>
+                        Github <a class="live-link" href="https://github.com/minhazur9/Tamagatchi-Pokemon">Link</a>
                 </p>
                 <img src="./styles/images/Tomagotchi.PNG" alt="Tomagotchi Clone" class="projects-picture">
             </h3>
