--- a/index.html
+++ b/index.html
@@ -141,6 +141,15 @@
     <div class="projects">
         <h2 class="projects-title">Projects</h2>
         <ul class='projects-list'>
+            <h3 class="projects-list-item">Premier
+                <p class="projects-desc">A fullstack application created by myself that allows people to look and research popular or top rated movies and tv shows, having the ability to make an account to make reviews on the movie/shows and post their own ratings to affect the average user score for others to see and read. You can also make your own list of recommendations of movies/shows and have them show up on your public profile. <br><br>
+                    Technologies used: <strong>Javascript, React.js, Python, Django, PostgresSQL, CSS, HTML, Materialize.css,      DjangoRESTFramework, JWT Auth</strong></br>
+                    Live: <a href="https://premier-min.herokuapp.com/" class="live-link">Premier</a><br>
+                    Github <a class="live-link" href="https://github.com/minhazur9/premier">Link</a><br><br>
+                    Use this Login Info:</strong><br>username: guest <br>password: guest<br>
+                </p>
+                <img src="./styles/images/Premier.PNG" alt="Premier" class="projects-picture">
+            </h3>
             <h3 class="projects-list-item">Wayfarer
                 <p class="projects-desc">A fullstack social media like application created by myself and three other developers 
                     in a week that allows users to create an account and post pictures of the sights and landmarks of the cities
