--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 issues
                 or breaking down large problems to find solutions so the program runs smoothly on the client side.
             </p>
-            <h3>Resume: <a id="resume" href="./files/Minhazur_Rahaman_Resume.docx" download>My Resume</a></h3>
+            <h3>Resume: <a id="resume" href="./files/Minhazur_Rahaman_Resume.pdf" download>My Resume</a></h3>
         </div>
     </div>
     <!-- Skills -->
