updated skills and portfolio

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                     JavaScript
                 </div>
                 <div class="col">
-                    React.js<span style="padding:82px">Jquery</span>
+                    React.js<span style="padding:82px">jQuery</span>
                 </div>
             </div>
 
@@ -110,7 +110,7 @@
                     CSS
                 </div>
                 <div class="col">
-                    Express.js
+                    Express.js<span style="padding:68px">GraphQL</span>
                 </div>
             </div>
 
@@ -119,7 +119,7 @@
                     Java
                 </div>
                 <div class="col">
-                    PostgresSQL
+                    PostgresSQL<span style="padding:47px">Apollo</span>
                 </div>
             </div>
 
