--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 issues
                 or breaking down large problems to find solutions so the program runs smoothly on the client side.
             </p>
-            <h3>Resume: <a id="resume" href="./files/Minhazur_Rahaman_Resume.pdf" download>My Resume</a></h3>
+            <h3>Resume: <a id="resume" href="./files/Minhazur_Rahaman_Resume.pdf" target="_blank">My Resume</a></h3>
         </div>
     </div>
     <!-- Skills -->
@@ -98,7 +98,7 @@
 
             <div class="row">
                 <div class="col">
-                     HTML 
+                    HTML
                 </div>
                 <div class="col">
                     MongoDB<span style="padding:70px">Bootstrap.css</span>
@@ -139,8 +139,13 @@
         <h2 class="projects-title">Projects</h2>
         <ul class='projects-list'>
             <h3 class="projects-list-item">Premier
-                <p class="projects-desc">A fullstack application created by myself that allows people to look and research popular or top rated movies and tv shows, having the ability to make an account to make reviews on the movie/shows and post their own ratings to affect the average user score for others to see and read. You can also make your own list of recommendations of movies/shows and have them show up on your public profile. <br><br>
-                    Technologies used: <strong>Javascript, React.js, Python, Django, PostgresSQL, CSS, HTML, Materialize.css,      DjangoRESTFramework, JWT Auth</strong></br>
+                <p class="projects-desc">A fullstack application created by myself that allows people to look and
+                    research popular or top rated movies and tv shows, having the ability to make an account to make
+                    reviews on the movie/shows and post their own ratings to affect the average user score for others to
+                    see and read. You can also make your own list of recommendations of movies/shows and have them show
+                    up on your public profile. <br><br>
+                    Technologies used: <strong>Javascript, React.js, Python, Django, PostgresSQL, CSS, HTML,
+                        Materialize.css, DjangoRESTFramework, JWT Auth</strong></br>
                     Live: <a href="https://premier-min.herokuapp.com/" class="live-link">Premier</a><br>
                     Github <a class="live-link" href="https://github.com/minhazur9/premier">Link</a><br><br>
                     Use this Login Info:</strong><br>username: guest <br>password: guest<br>
@@ -148,10 +153,14 @@
                 <img src="./styles/images/Premier.PNG" alt="Premier" class="projects-picture">
             </h3>
             <h3 class="projects-list-item">Wayfarer
-                <p class="projects-desc">A fullstack social media like application created by myself and three other developers 
-                    in a week that allows users to create an account and post pictures of the sights and landmarks of the cities
-                    that they have traveled to share it with the world, and to also comment on other peoples posts. <br><br>
-                    Technologies used: <strong>Javascript, Python, Django, Jquery, PostgresSQL, CSS, HTML, Materialize.css</strong></br>
+                <p class="projects-desc">A fullstack social media like application created by myself and three other
+                    developers
+                    in a week that allows users to create an account and post pictures of the sights and landmarks of
+                    the cities
+                    that they have traveled to share it with the world, and to also comment on other peoples posts.
+                    <br><br>
+                    Technologies used: <strong>Javascript, Python, Django, Jquery, PostgresSQL, CSS, HTML,
+                        Materialize.css</strong></br>
                     Live: <a href="https://wayfarer-min.herokuapp.com/" class="live-link">Wayfarer</a><br>
                     Github <a class="live-link" href="https://github.com/minhazur9/wayfarer">Link</a><br><br>
                     Use this Login Info:</strong><br>email: guest123 <br>password: accountpass<br>
@@ -168,7 +177,7 @@
                     Live: <a href="https://fierce-bastion-27114.herokuapp.com/" class="live-link">MusicScape</a><br>
                     Github <a class="live-link" href="https://github.com/minhazur9/MusicScape">Link</a><br><br>
                     Use this Login Info:</strong><br>email: guest@gmail.com <br>password: guest<br>
-                    
+
                 </p>
                 <img src="./styles/images/MusicScape.PNG" alt="MusicScape" class="projects-picture">
 
@@ -180,9 +189,9 @@
                     Technologies used: <strong>JavaScript, HTML, CSS</strong><br>
                     Live: <a href="https://pages.git.generalassemb.ly/min/Project-0-Tamagotchi/"
                         class="live-link">Tamagotchi Pokemon</a><br>
-                        Github <a class="live-link" href="https://github.com/minhazur9/Tamagatchi-Pokemon">Link</a>
+                    Github <a class="live-link" href="https://github.com/minhazur9/Tamagatchi-Pokemon">Link</a>
                 </p>
-                <img src="./styles/images/Tomagotchi.PNG" alt="Tomagotchi Clone" class="projects-picture">
+                <img src="./styles/images/Tomagotchi.PNG" alt="Tomagotchi Clone" class="projects-picture toga">
             </h3>
         </ul>
     </div>
@@ -190,16 +199,11 @@
     <div class="contact-container">
         <div class="contact">
             <h2 class="contact-title">Contact Me</h2>
-            <form action="mailto:minhazur190@gmail.com" method="GET">
-                <label for="subject" class="contact-fields">Subject</label>
-                <input class="contact-input" type="text" name="subject" id="subject">
-                <label for="body" class="contact-fields">Message</label>
-                <textarea class="contact-input" name="body" id="body" cols="40" rows="3"></textarea>
-                <input class="contact-input-button" type="submit" value="Submit">
-            </form>
-            <p>Form not working? Email me at <strong>minhazur190@gmail.com</strong></p>
-            <a href="https://github.com/minhazur9" class="github"><i class="fab fa-github"></i></a>
-            <a href="https://www.linkedin.com/in/mindev22/" class="linkedIn"><i class="fab fa-linkedin"></i></a>
+            <div class="icons">
+                <a href="mailto:minhazur190@gmail.com" class="envelope"><i class="fas fa-envelope"></i></a>
+                <a href="https://github.com/minhazur9" class="github"><i class="fab fa-github"></i></a>
+                <a href="https://www.linkedin.com/in/mindev22/" class="linkedIn"><i class="fab fa-linkedin"></i></a>
+            </div>
         </div>
     </div>
 </body>
