--- a/index.html
+++ b/index.html
@@ -69,7 +69,33 @@
     <div class="skills-container">
         <div class="skills">
             <h2 class="skills-title">Skills</h2>
-            <div class="row">
+            <div class="skills-grid">
+                <div class="languages">
+                    <h4>Languages</h4>
+                    <p class="skill">JavaScript</p>
+                    <p class="skill">Python</p>
+                    <p class="skill">HTML</p>
+                    <p class="skill">CSS</p>
+                    <p class="skill">Java</p>
+                    <p class="skill">C++</p>
+                </div>
+                <div class="frameworks">
+                    <h4>Libraries & Frameworks</h4>
+                    <p></p>
+                    <p class="skill">React.js</p>
+                    <p class="skill">jQuery.js</p>
+                    <p class="skill">Django</p>
+                    <p class="skill">Node.js</p>
+                    <p class="skill">GraphQL</p>
+                    <p class="skill">Apollo</p>
+                    <p class="skill">Bootstrap.css</p>
+                    <p class="skill">Materialize.css</p>
+                    <p class="skill">MongoDB</p>
+                    <p class="skill">PostgresSQL</p>
+                </div>
+            </div>
+            
+            <!-- <div class="row">
                 <div class="col">
                     <h4>Languages</h4>
                 </div>
@@ -130,7 +156,7 @@
                 <div class="col">
                     Node.js
                 </div>
-            </div>
+            </div> -->
         </div>
     </div>
 
