page is now accessible on mobile

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     <p class="skill">C++</p>
                 </div>
                 <div class="frameworks">
-                    <h4>Libraries & Frameworks</h4>
+                    <h4 class="frameworks-title">Libraries & Frameworks</h4>
                     <p></p>
                     <p class="skill">React.js</p>
                     <p class="skill">jQuery.js</p>
@@ -164,7 +164,8 @@
     <div class="projects">
         <h2 class="projects-title">Projects</h2>
         <ul class='projects-list'>
-            <h3 class="projects-list-item">Premier
+            <h3 class="projects-list-item">
+                <p class="project-name">Premier</p>
                 <p class="projects-desc">A fullstack application created by myself that allows people to look and
                     research popular or top rated movies and tv shows, having the ability to make an account to make
                     reviews on the movie/shows and post their own ratings to affect the average user score for others to
@@ -178,7 +179,8 @@
                 </p>
                 <img src="./styles/images/Premier.PNG" alt="Premier" class="projects-picture">
             </h3>
-            <h3 class="projects-list-item">Wayfarer
+            <h3 class="projects-list-item">
+                <p class="project-name">Wayfarer</p>
                 <p class="projects-desc">A fullstack social media like application created by myself and three other
                     developers
                     in a week that allows users to create an account and post pictures of the sights and landmarks of
@@ -193,7 +195,8 @@
                 </p>
                 <img src="./styles/images/Wayfarer.PNG" alt="Wayfarer" class="projects-picture">
             </h3>
-            <h3 class="projects-list-item">MusicScape
+            <h3 class="projects-list-item">
+                <p class="project-name">MusicScape</p>
                 <p class="projects-desc">A fullstack application created by myself and another developer in a week that
                     allows users to create playlists and add songs to them which automatically includes embedded music
                     videos by using Genius API. A user can view other peoples playlists and songs and also create their
@@ -208,7 +211,8 @@
                 <img src="./styles/images/MusicScape.PNG" alt="MusicScape" class="projects-picture">
 
             </h3>
-            <h3 class="projects-list-item">Tomagotchi Pokemon
+            <h3 class="projects-list-item">
+                <p class="project-name">Tomagotchi Pokemon</p>
                 <p class="projects-desc">A browser game that requires skill and focus that needs players to help a pet
                     survive until it morphs into its later stages in life. It records how many days your pet has
                     survived and the clock will be ticking at all times<br><br>
